--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
 <body>
-    <h1>Hello World saisahas this is modified text in this web page</h1>
-    <h2>welcome to hyd</h2>
-    <h3>This is my first pipeline project</h3>
+   <h1>Hello World, This is a Test Update!</h1>
 </body>
 </html>
