Reverted index.html to an earlier state

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-    <h1>Hello World saisahas this is modified text in this web page</h1>
-    <h2>welcome to hyd</h2>
+    <h1>Hello World saisahas</h1>
 </body>
 </html>
